@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/file_list.c)
-AM_INIT_AUTOMAKE(oftpd, 0.3.7-wk1)
+AM_INIT_AUTOMAKE(oftpd, 0.3.7-wk2)
 AM_CONFIG_HEADER(src/config.h)
 
 dnl Checks for programs.
@@ -43,6 +43,7 @@ AC_FUNC_MEMCMP
 AC_TYPE_SIGNAL
 AC_FUNC_STRFTIME
 AC_CHECK_FUNCS(getcwd gettimeofday select socket strerror localtime_r gmtime_r)
+AC_CHECK_FUNCS(strerror_r)
 dnl AC_CHECK_LIB(pthread, pthread_create)
 dnl AC_SEARCH_LIBS(pthread_create, [ pthread pthreads thread threads ])
 AC_SEARCH_LIBS(socket, socket)
@@ -103,6 +104,14 @@ CFLAGS="$CFLAGS -D_REENTRANT -D_THREAD_SAFE"
 dnl Check whether to enable IPv6 support
 AC_ARG_ENABLE([ipv6],[  --enable-ipv6           Enable IPv6 support (disabled by default)],
               CFLAGS="$CFLAGS -DINET6",)
+
+
+AH_BOTTOM([
+/* Size of the buffer used for strerror_r. */
+#define ERRBUF_SIZE 256
+])
+
+
 
 AC_SUBST(HAVE_NEW_SS_FAMILY)
 AC_OUTPUT(Makefile src/Makefile man/Makefile)
